syntax = "proto2";

package org.allenai.scienceparse2;

message Token {
    required string text = 1;
    required float left = 2;
    required float right = 3;
    required float top = 4;
    required float bottom = 5;
    required string font = 6;
    required float font_size = 7;
    required float font_space_width = 8;
}

message Page {
    required float width = 1;
    required float height = 2;
    repeated Token tokens = 3;
}

message PDFMetadata {
    optional string title = 1;
    repeated string authors = 2;
    repeated string keywords = 3;
    optional int64 created = 4;
    optional int64 last_modified = 5;
    optional string creator = 6;
}

message Document {
    required string docId = 1;
    required PDFMetadata metadata = 2;
    repeated Page pages = 3;
}
